--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     font-size: 20px;
+    
 }
 
 .searchDiv
@@ -41,6 +42,7 @@
     outline: 1px solid black;
     margin-top: 15px;
     width: 70%;
+    box-shadow: 5px 5px 5px black;
 }
 
 .individualDataDiv > div >h4
