--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,10 @@
     padding: 5px;
     margin: 0 ;
 }
+
+.resultDiv
+{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    justify-items: center;
+}
