--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,6 @@
     margin-right: 15px;
 }
 
-.searchDiv > button
-{
-    width: 100px;
-}
-
 .charactersDataDiv
 {
     display: grid;
@@ -42,6 +37,13 @@
     outline: 1px solid black;
     margin-top: 15px;
     width: 70%;
+    cursor: pointer;
+}
+
+.individualDataDiv:hover
+{
+    background-color: yellow;
+    transition: 0.5s;
     box-shadow: 5px 5px 5px black;
 }
 
@@ -56,4 +58,11 @@
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     justify-items: center;
+}
+
+.alertDiv
+{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
 }
